@@ -16,6 +16,7 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 
 === changed
 * Improve confluence export performance when only ancestorIds are given
+* https://github.com/docToolchain/docToolchain/issues/683[#683 publishToConfluence with unknown source language]
 
 == 2.1.0 - 2022-08-15
 
